Fix wrong font on chat folders
It used Arial, but should have used OpenSans/Vazir.

--- a/src/dibgram/messenger/ui/navigation-menu/chat-folders.scss
+++ b/src/dibgram/messenger/ui/navigation-menu/chat-folders.scss
@@ -35,6 +35,7 @@
                 z-index: 1;
                 cursor: pointer;
                 word-break: break-word;
+                font-family: var(--font-family);
                 * { pointer-events: none; }
             }
 
@@ -48,7 +49,8 @@
                 font-size: 11px;
                 line-height: 15px;
                 font-weight: 500;
-                margin-top: -4px;
+                margin-top: -6px;
+                margin-bottom: 1px;
                 color: var(--theme-color-sideBarTextFg);
             }
 
